<resources>
    <string name="app_name">Quiz App</string>
    <string name="titleText">Take the challenge and try this Science Quiz</string>
    <string name="editNameText">Enter your name here</string>
    <string name="question1">1. This picture shows an object in space that has an icy core with a tail of gas and dust that extends millions of miles. What is this?</string>
    <string name="answer1.1">A star</string>
    <string name="answer1.2">An asteroid</string>
    <string name="answer1.3">A comet</string>
    <string name="answer1.4">A moon</string>
    <string name="question2">2. Which kind of waves are used to make and receive cellphone calls?</string>
    <string name="answer2.1">Sound waves</string>
    <string name="answer2.2">Radio waves</string>
    <string name="answer2.3">Gravity waves</string>
    <string name="answer2.4">Visible light waves</string>
    <string name="question3">3. There are three layers of the Earth. Which one is the hottest?</string>
    <string name="answer3.1">Earth\'s Crust</string>
    <string name="answer3.2">Earth\'s Mantle</string>
    <string name="answer3.3">Earth\'s Outer Core</string>
    <string name="question4">4. Which is the main way that ocean tides are created?!</string>
    <string name="answer4.1">The rotation of the Earth on its axis</string>
    <string name="answer4.2">The gravitational pull of the moon</string>
    <string name="answer4.3">The gravitational pull of the sun</string>
    <string name="question5">5. What does a light-year measure?</string>
    <string name="answer5.1">Brightness</string>
    <string name="answer5.2">Time</string>
    <string name="answer5.3">Distance</string>
    <string name="answer5.4">Weight</string>
    <string name="question6">6. Which picture best illustrates what happens when light passes through a magnifying glass?</string>
    <string name="question7">7. Which physical phenomenon is measured with Richter scale?</string>
    <string name="answer7.1">Earthquake</string>
    <string name="answer7.2">Hurricane</string>
    <string name="answer7.3">Tsunami</string>
    <string name="answer7.4">Solar radiation</string>
    <string name="question8">8. Which element is needed to make nuclear energy?</string>
    <string name="answer8.1">Sodium chloride</string>
    <string name="answer8.2">Uranium</string>
    <string name="answer8.3">Nitrogean</string>
    <string name="answer8.4">Carbon dioxide</string>
    <string name="question9">9. Who has developed the polio vaccine?</string>
    <string name="answer9.10.1">Marie Curie</string>
    <string name="answer9.2">Isaac Newton</string>
    <string name="answer9.3">Albert Einstein</string>
    <string name="answer9.4">Jonas Salk</string>
    <string name="question10">10. Which of these scientists have won two nobel prizes?</string>
    <string name="answer10.2">Linus Pauling</string>
    <string name="answer10.3">John Bardeen</string>
    <string name="answer10.4">Frederick Sanger</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="perfectScore">"Excellent %1$s, you get a perfect score: %2$d/10! We salute you!!"</string>
    <string name="highScore">Very good %1$s, you score: %2$d/10. Almost perfect. Do you want to try again?</string>
    <string name="mediumScore">Nice try %1$s, you score: %2$d/10! But I\'m sure you can do better. Try again.</string>
    <string name="lowScore">Come on %1$s, you score: %2$d/10! I\'m sure you can do better. Try again.</string>
    <string name="veryLowScore">That was bad %1$s, you score: %2$d/10! Did you even try? Why don\'t you try again?</string>

</resources>
