<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/titleText"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edit_view"
            android:hint="@string/editNameText"
            android:inputType="textCapWords"
            style="@style/CustomTextStyle"/>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question1" />

        <ImageView
            android:id="@+id/comet_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/comet_image" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/star_button"
                android:onClick="on1AnswerRadioButtonClicked"
                android:text="@string/answer1.1"
                style="@style/CustomRadioButtonStyle"/>

            <RadioButton
                android:id="@+id/asteroid_button"
                android:onClick="on1AnswerRadioButtonClicked"
                android:text="@string/answer1.2"
                style="@style/CustomRadioButtonStyle"/>

            <RadioButton
                android:id="@+id/comet_button"
                android:onClick="on1AnswerRadioButtonClicked"
                android:text="@string/answer1.3"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/moon_button"
                android:onClick="on1AnswerRadioButtonClicked"
                android:text="@string/answer1.4"
                style="@style/CustomRadioButtonStyle" />
        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question2" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/sound_waves_button"
                android:onClick="on2AnswerRadioButtonClicked"
                android:text="@string/answer2.1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/radio_waves_button"
                android:onClick="on2AnswerRadioButtonClicked"
                android:text="@string/answer2.2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/gravity_waves_button"
                android:onClick="on2AnswerRadioButtonClicked"
                android:text="@string/answer2.3"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/light_waves_button"
                android:onClick="on2AnswerRadioButtonClicked"
                android:text="@string/answer2.4"
                style="@style/CustomRadioButtonStyle" />
        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question3" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/crust_button"
                android:onClick="on3AnswerRadioButtonClicked"
                android:text="@string/answer3.1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/mantle_button"
                android:onClick="on3AnswerRadioButtonClicked"
                android:text="@string/answer3.2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/core_button"
                android:onClick="on3AnswerRadioButtonClicked"
                android:text="@string/answer3.3"
                style="@style/CustomRadioButtonStyle" />

        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question4" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/rotation_axis_button"
                android:onClick="on4AnswerRadioButtonClicked"
                android:text="@string/answer4.1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/gravity_moon_button"
                android:onClick="on4AnswerRadioButtonClicked"
                android:text="@string/answer4.2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/gravity_sun_button"
                android:onClick="on4AnswerRadioButtonClicked"
                android:text="@string/answer4.3"
                style="@style/CustomRadioButtonStyle" />

        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question5" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/brightness_button"
                android:onClick="on5AnswerRadioButtonClicked"
                android:text="@string/answer5.1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/time_button"
                android:onClick="on5AnswerRadioButtonClicked"
                android:text="@string/answer5.2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/distance_button"
                android:onClick="on5AnswerRadioButtonClicked"
                android:text="@string/answer5.3"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/weight_button"
                android:onClick="on5AnswerRadioButtonClicked"
                android:text="@string/answer5.4"
                style="@style/CustomRadioButtonStyle" />
        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question6" />

        <ImageView
            android:id="@+id/magnifying_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/magnifying_glass" />

        <RadioGroup
            style="@style/CustomHorizontalRadioGroupStyle">

            <RadioButton
                android:id="@+id/magnifying1_button"
                android:layout_weight="1"
                android:onClick="on6AnswerRadioButtonClicked"
                android:text="1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/magnifying2_button"
                android:layout_weight="1"
                android:onClick="on6AnswerRadioButtonClicked"
                android:text="2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/magnifying3_button"
                android:layout_weight="1"
                android:onClick="on6AnswerRadioButtonClicked"
                android:text="3"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/magnifying4_button"
                android:layout_weight="1"
                android:onClick="on6AnswerRadioButtonClicked"
                android:text="4"
                style="@style/CustomRadioButtonStyle" />
        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question7" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/earthquake_button"
                android:onClick="on7AnswerRadioButtonClicked"
                android:text="@string/answer7.1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/hurricane_button"
                android:onClick="on7AnswerRadioButtonClicked"
                android:text="@string/answer7.2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/tsunami_button"
                android:onClick="on7AnswerRadioButtonClicked"
                android:text="@string/answer7.3"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/solar_radiation_button"
                android:onClick="on7AnswerRadioButtonClicked"
                android:text="@string/answer7.4"
                style="@style/CustomRadioButtonStyle" />
        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question8" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/sodium_chloride_button"
                android:onClick="on8AnswerRadioButtonClicked"
                android:text="@string/answer8.1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/uranium_button"
                android:onClick="on8AnswerRadioButtonClicked"
                android:text="@string/answer8.2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/nitrogean_button"
                android:onClick="on8AnswerRadioButtonClicked"
                android:text="@string/answer8.3"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/carbon_dioxide_button"
                android:onClick="on8AnswerRadioButtonClicked"
                android:text="@string/answer8.4"
                style="@style/CustomRadioButtonStyle" />
        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question9" />

        <ImageView
            android:id="@+id/polio_vaccine_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/polio_vaccine" />

        <RadioGroup
            style="@style/CustomVerticalRadioGroupStyle">

            <RadioButton
                android:id="@+id/marieCurie_button"
                android:onClick="on9AnswerRadioButtonClicked"
                android:text="@string/answer9.10.1"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/isaacNewton_button"
                android:onClick="on9AnswerRadioButtonClicked"
                android:text="@string/answer9.2"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/albertEinstein_button"
                android:onClick="on9AnswerRadioButtonClicked"
                android:text="@string/answer9.3"
                style="@style/CustomRadioButtonStyle" />

            <RadioButton
                android:id="@+id/jonasSalk_button"
                android:onClick="on9AnswerRadioButtonClicked"
                android:text="@string/answer9.4"
                style="@style/CustomRadioButtonStyle" />
        </RadioGroup>

        <TextView
            style="@style/CustomTextStyle"
            android:text="@string/question10" />

        <CheckBox
            android:id="@+id/marieCurie_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/answer9.10.1"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/linusPauling_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10.2"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/johnBardeen_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10.3"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/frederickSanger_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10.4"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="submitAnswers"
                android:text="@string/submit" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="resetButton"
                android:text="@string/reset" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="exitApp"
                android:text="@string/exit" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
